# stellaris-dashboard

./: .gitignore  .gitmodules  CODEBASE_REVIEW.md  README.md  configure_layout.md  dev-requirements.txt  install.bat  pyinstaller-package.spec  pyproject.toml  requirements.txt  setup.py  stellarisdashboard-win.spec  stellarisdashboard.bat
.github/workflows/: build.yml
mod/: StellarisDashboardIntegration.mod  StellarisTimeline.mod  description.txt  stellaris_dashboard.mod
mod/Dashboard/interface/: browser.gui  timeline_button.gfx
mod/Timeline/interface/: browser.gui  timeline_button.gfx
mod/stellaris_dashboard/: descriptor.mod
mod/stellaris_dashboard/interface/: browser.gui  main_bottom.gui  stellaris_dashboard.gfx  timeline_button.gfx
mod/stellaris_dashboard/localisation/: stellaris_dashboard_l_braz_por.yml  stellaris_dashboard_l_english.yml  stellaris_dashboard_l_french.yml  stellaris_dashboard_l_german.yml  stellaris_dashboard_l_japanese.yml  stellaris_dashboard_l_korean.yml  stellaris_dashboard_l_polish.yml  stellaris_dashboard_l_russian.yml  stellaris_dashboard_l_simp_chinese.yml  stellaris_dashboard_l_spanish.yml
mod/stellaris_dashboard_uiod/: descriptor.mod
mod/stellaris_dashboard_uiod/interface/: Ω_uiod_main_bottom.gui
pyinstaller-hooks/: hook-flask.py
src/: main.py  save_parser.py  timeline.py  token_value_stream.pyx  visualization.py
src/stellarisdashboard/: __main__.py  cli.py  config.ini  config.py  dash_server.py  default_paths.py  game_info.py  main.py  models.py  random_execution.py  save_parser.py  timeline.py  token_value_stream_re.py  visualization.py  visualization_data.py  visualization_mpl.py
src/stellarisdashboard/cython_ext/: token_value_stream.c  token_value_stream.cp36-win32.pyd  token_value_stream.cp36-win_amd64.pyd  (+3 more)
stellarisdashboard/: LICENSE  __main__.py  _force_imports.py  cli.py  config.py  dash_server.py  datamodel.py  default_paths.py  game_info.py  models.py  parse_existing_saves.py  save_parser.py  timeline.py  token_value_stream_re.py  visualization_data.py  visualization_mpl.py
stellarisdashboard/cython_ext/: token_value_stream.c  token_value_stream.cp36-win_amd64.pyd  token_value_stream.cp37-win32.pyd
stellarisdashboard/dashboard_app/: __init__.py  event_registry.py  galaxy_map.py  game_index.py  graph_ledger.py  history_ledger.py  settings.py  timelapse_exporter.py  utils.py  visualization_data.py
stellarisdashboard/parsing/: errors.py  save_parser.py  timeline.py  token_value_stream_re.py  tokenizer_re.py
stellarisdashboard/parsing/rust_parser/: Cargo.toml  pyproject.toml
stellarisdashboard/parsing/rust_parser/src/: file_io.rs  lib.rs  parser.rs
stellarisdashboard/static/: style.css
stellarisdashboard/templates/: history_page.html  index.html  layout.html  settings_page.html
stellaristimeline/: cli.py  dash_server.py  main.py  models.py  save_parser.py  timeline.py  timeline_db.py  token_value_stream.c  visualization.py
test/: conftest.py  extract_id_test.py  names_test.py  parser_test.py  parser_test_cases.py  parser_test_data.py  timeline_test.py  token_value_stream_test.py  token_value_stream_test_data.py  tokenizer_test.py  tokenizer_test_cases.py  utils_test.py
(+26 files in other folders)
