[package]
name = "rust_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
# nom and zip are intentionally held at their current majors: they are
# internal to the parser and unrelated to the Python 3.14 / pyo3 modernization.
# Bumping them (nom 8, zip 9) is a separate large rewrite of parser.rs/file_io.rs.
nom = "7.1.1"
zip = "0.6.2"
serde_json = "1.0"
chrono = "0.4"
serde = { version = "1.0.143", features = ["derive"] }
